Fix gallery scroll: first image now fully visible in mobile view

--- a/skincare-blog/pages/styles/luxury.css
+++ b/skincare-blog/pages/styles/luxury.css
@@ -268,6 +268,7 @@
     box-sizing: border-box;
     scroll-snap-type: x mandatory;
   }
+    scroll-padding-left: 0 !important;
   .row.g-3.justify-content-center > .col-6,
   .row.g-3.justify-content-center > .col-6.col-sm-4,
   .row.g-3.justify-content-center > .col-6.col-sm-4.col-md-3.col-lg-2 {
